# galaxy_gen

./: .gitignore  LICENSE  MANIFEST.in  README.md  file_test.py  pyproject.toml  setup.py  test.ipynb  test.py
.github/workflows/: testworkflow.yml
data/: vae_flow_data.pkl
galaxy_gen/: foramtiontimeModel.py  gammaflowModel.py  load.py  massesModel.py  metallicityModel.py  model.py  sampler.py  test.py
galaxy_gen/data/: metallicity_data.pkl
galaxy_gen/genmodels/: metallicitydModel.py  samplemodel.py
galaxy_gen/genmodels/lofarModel/: config.py  diffusion.py  model_utils.py  paths.py  sampler.py  unet.py
galaxy_gen/models/: formationtime_model.pth  metallicity_model.pth  sample_model.pth
