# pyproject.toml

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "galaxy_gen"
version = "1.2.0"
description = "A library to generate galaxy data/distributions."
readme = "README.md"
authors = [{name = "Abhiroop Ippagunta"}]
dependencies = ["torch","gdown","torchvision","denoising_diffusion_pytorch", "indexed", "nvidia-smi", "nvidia-ml-py3"]

[tool.setuptools.package-data]
"galaxy_gen" = ["genmodels/*"]